--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -6,6 +6,7 @@
   justify-content: space-around;
   background-color: #282a36;
   color: #ffffff;
+  flex-wrap: wrap;
 }
 
 .main {
@@ -161,7 +162,7 @@
 }
 
 .navigation_card:hover{
-  transform: scale(1.03);
+  transform: scale(1.01);
   transition: all 0.3s ease 0s;
 }
 
@@ -194,6 +195,11 @@
   display: flex;
   flex-direction: column;
   margin-top: 1.4%;
+  max-width: 600px;
+}
+
+.aboutme_container p{
+  display: flex;
 }
 /*
     transform: scale(1.05);
